add page scroll

--- a/index.html
+++ b/index.html
@@ -35,21 +35,21 @@
 					</button>
 					<ul class="menu__list">
 						<li class="menu__item">
-							<a href="#" class="menu__link">Home</a>
+							<a href="#home" class="menu__link">Home</a>
 						</li>
 						<li class="menu__item">
-							<a href="#" class="menu__link">Features</a>
+							<a href="#features" class="menu__link">Features</a>
 						</li>
 						<li class="menu__item">
-							<a href="#" class="menu__link">Pricing</a>
+							<a href="#pricing" class="menu__link">Pricing</a>
 						</li>
 						<li class="menu__item">
-							<a href="#" class="menu__link">Download Now</a>
+							<a href="#download" class="menu__link">Download Now</a>
 						</li>
 					</ul>
 				</nav>
 			</div>
-			<div class="header-banner">
+			<div id="home" class="header-banner">
 				<h1 class="header-title">A Powerful & Unique App Landing Template</h1>
 				<p class="header-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
 					incididunt ut labore et dolore magna aliqua.</p>
@@ -90,7 +90,7 @@
 		</div>
 	</header>
 
-	<section class="features">
+	<section id="features" class="features">
 		<div class="container">
 			<div class="features-container">
 				<div class="features-item">
@@ -259,7 +259,7 @@
 		</div>
 	</section>
 
-	<section class="price">
+	<section id="pricing" class="price">
 		<div class="container">
 			<div class="price-desc">
 				<h2 class="price-desc__title">We've got the perfect package for you</h2>
@@ -434,7 +434,7 @@
 		</div>
 	</section>
 
-	<section class="download">
+	<section id="download" class="download">
 		<div class="container">
 			<h2 class="download__title">Download Giant App Now</h2>
 			<div class="download-list">
@@ -552,6 +552,7 @@
 	<script src="libs/jquery/jquery-3.3.1.min.js"></script>
 	<script src="libs/jQuery-Waterwheel-Carousel/js/jquery.waterwheelCarousel.min.js"></script>
 	<script src="libs/slick-1.8.1/slick/slick.min.js"></script>
+	<script src="libs/pagescroll2id/jquery.malihu.PageScroll2id.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.11/jquery.mousewheel.min.js"></script>
 	<script src="js/main.js"></script>
 
